Finished first pass at migrating knative gcp source to here.

--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -15,7 +15,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: eventing-gcp-gcppubsub-controller
+  name: eventing-gcp-controller
 rules:
 
 - apiGroups:
