--- a/config/200-serviceaccount.yaml
+++ b/config/200-serviceaccount.yaml
@@ -15,15 +15,17 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: gcppubsub-controller-manager
+  name: gcp-controller
   namespace: knative-gcp
 secrets:
-- name: gcppubsub-source-key
+- name: gcp-source-key
+
 ---
+
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gcppubsub-source-key
+  name: gcp-source-key
 type: Opaque
 data:
   'key.json': ""
