--- a/config/400-controller-service.yaml
+++ b/config/400-controller-service.yaml
@@ -15,12 +15,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gcppubsub-controller
+  name: gcp-controller
   namespace: knative-gcp
   labels:
-    control-plane: gcppubsub-controller-manager
+    control-plane: gcp-controller
 spec:
   selector:
-    control-plane: gcppubsub-controller-manager
+    control-plane: gcp-controller
   ports:
   - port: 443
