--- a/config/500-controller.yaml
+++ b/config/500-controller.yaml
@@ -47,7 +47,27 @@ spec:
           requests:
             cpu: 100m
             memory: 100Mi
+        ports:
+          - name: metrics
+            containerPort: 9090
+          volumeMounts:
+            - name: config-logging
+              mountPath: /etc/config-logging
+          env:
+            - name: SYSTEM_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: CONFIG_LOGGING_NAME
+              value: config-logging
+            - name: CONFIG_OBSERVABILITY_NAME
+              value: config-observability
+            - name: METRICS_DOMAIN
+              value: cloud.run/events
       volumes:
+      - name: config-logging
+        configMap:
+          name: config-logging
       - name: google-cloud-key
         secret:
           secretName: cloud-run-events-source-key
