--- a/config/400-controller-service.yaml
+++ b/config/400-controller-service.yaml
@@ -17,6 +17,8 @@ kind: Service
 metadata:
   name: cloud-run-events-controller
   namespace: cloud-run-events
+    labels:
+      events.cloud.run/release: devel
   labels:
     control-plane: cloud-run-events-controller
 spec:
