--- a/config/100-namespace.yaml
+++ b/config/100-namespace.yaml
@@ -1,10 +1,10 @@
-# Copyright 2019 Google LLC
+# Copyright 2018 The Knative Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+#     https://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,23 +13,8 @@
 # limitations under the License.
 
 apiVersion: v1
-kind: ServiceAccount
+kind: Namespace
 metadata:
-  name: cloud-run-events-controller
   namespace: cloud-run-events
   labels:
     events.cloud.run/release: devel
-secrets:
-- name: cloud-run-events-source-key
-
----
-
-apiVersion: v1
-kind: Secret
-metadata:
-  name: cloud-run-events-source-key
-  labels:
-    events.cloud.run/release: devel
-type: Opaque
-data:
-  'key.json': ""
