--- a/config/202-clusterrolebinding.yaml
+++ b/config/202-clusterrolebinding.yaml
@@ -16,6 +16,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: cloud-run-events-controller
+  labels:
+    events.cloud.run/release: devel
+
 subjects:
 - kind: ServiceAccount
   name: cloud-run-events-controller
@@ -31,6 +34,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: cloud-run-events-controller-resolver
+  labels:
+    events.cloud.run/release: devel
+
 subjects:
 - kind: ServiceAccount
   name: cloud-run-events-controller
