--- a/config/600-istioegress.yaml
+++ b/config/600-istioegress.yaml
@@ -17,6 +17,8 @@ apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
 metadata:
   name: cloud-run-events-bus-ext
+  labels:
+    events.cloud.run/release: devel
 spec:
   hosts:
   - "*.googleapis.com"
