--- a/config/400-controller-service.yaml
+++ b/config/400-controller-service.yaml
@@ -17,12 +17,14 @@ kind: Service
 metadata:
   name: cloud-run-events-controller
   namespace: cloud-run-events
-    labels:
-      events.cloud.run/release: devel
   labels:
+    events.cloud.run/release: devel
     control-plane: cloud-run-events-controller
 spec:
   selector:
     control-plane: cloud-run-events-controller
   ports:
-  - port: 443
+    - name: metrics
+      port: 9090
+      protocol: TCP
+      targetPort: 9090
