--- a/config/once/google-secret.yaml
+++ b/config/once/google-secret.yaml
@@ -13,11 +13,12 @@
 # limitations under the License.
 
 apiVersion: v1
-kind: ServiceAccount
+kind: Secret
 metadata:
-  name: cloud-run-events-controller
+  name: cloud-run-events-source-key
   namespace: cloud-run-events
   labels:
     events.cloud.run/release: devel
-secrets:
-- name: cloud-run-events-source-key
+type: Opaque
+data:
+  'key.json': "" # <-- Insert the contents of the key, base64 encoded here.
