--- a/config/500-controller.yaml
+++ b/config/500-controller.yaml
@@ -21,12 +21,11 @@ metadata:
   namespace: cloud-run-events
   labels:
     events.cloud.run/release: devel
-    control-plane: cloud-run-events-controller
 spec:
+  replicas: 1
   selector:
     matchLabels: &labels
       control-plane: cloud-run-events-controller
-  serviceName: cloud-run-events-controller
   template:
     metadata:
       labels: *labels
