--- a/samples/pubsub-source.yaml
+++ b/samples/pubsub-source.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 The Knative Authors
+# Copyright 2019 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,36 +19,17 @@
 apiVersion: events.cloud.run/v1alpha1
 kind: PubSubSource
 metadata:
-  name: pubsub-demo-source
+  name: TOPIC_NAME-source
 spec:
   gcpCredsSecret:
     name: google-cloud-key
     key: key.json
-  googleCloudProject: plori-nicholss
-  topic: demo
+  googleCloudProject: MY_GCP_PROJECT
+  topic: TOPIC_NAME
   sink:
-    apiVersion: serving.knative.dev/v1alpha1
+    apiVersion: v1
     kind: Service
-    name: sockeye
-#    apiVersion: eventing.knative.dev/v1alpha1
-#    kind: Broker
-#    name: default
+    name: event-display
 
----
-
-apiVersion: eventing.knative.dev/v1alpha1
-kind: Trigger
-metadata:
-  name: sockeye-pubsub-foo
-spec:
-  broker: default
-  filter:
-    sourceAndType:
-      type: google.pubsub.topic.publish
-  subscriber:
-    ref:
-      apiVersion: serving.knative.dev/v1alpha1
-      kind: Service
-      name: sockeye
-
-# gcloud pubsub topics publish demo --message '{"id":123,"message":"hi from the terminal"}'
+# Example gcloud command to send a message:
+# gcloud pubsub topics publish demo --message '{"message":"hi from the terminal"}'
