Update docs to work with new resource.

--- a/config/300-pubsubsource.yaml
+++ b/config/300-pubsubsource.yaml
@@ -43,15 +43,20 @@ spec:
         metadata:
           type: object
         spec:
+          # TODO: update the OpenAPI to be much more robust.
+          # TODO: document required fields.
           properties:
-            gcpCredsSecret:
+            secret:
               type: object
-              description: "Credential to use to poll the GCP PubSub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys)."
-            googleCloudProject:
+              # TODO: document we default.
+              description: "Credential to use to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys)."
+            project:
               type: string
-              description: "ID of the Google Cloud Project that the PubSub Topic exists in. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'."
+              # TODO: document we default.
+              description: "ID of the Google Cloud Project that the Pub/Sub Topic exists in. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'."
             serviceAccountName:
               type: string
+              # TODO: document we default.
               description: "Name of the Kubernetes ServiceAccount that is running the Receiver Adapter Pods."
             sink:
               type: object
@@ -61,7 +66,7 @@ spec:
               description: "Reference to an object that will resolve to a domain name to use as the transformer."
             topic:
               type: string
-              description: "ID of the GCP PubSub Topic to Subscribe to. It must be in the form of the unique identifier within the project, not the entire name. E.g. it must be 'laconia', not 'projects/my-gcp-project/topics/laconia'."
+              description: "ID of the Cloud Pub/Sub Topic to Subscribe to. It must be in the form of the unique identifier within the project, not the entire name. E.g. it must be 'laconia', not 'projects/my-gcp-project/topics/laconia'."
           type: object
         status:
           properties:
