--- a/config/202-rolebinding.yaml
+++ b/config/202-rolebinding.yaml
@@ -13,9 +13,10 @@
 # limitations under the License.
 
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: cloud-run-events-controller
+  namespace: cloud-run-events
   labels:
     events.cloud.run/release: devel
 subjects:
@@ -24,24 +25,5 @@ subjects:
   namespace: cloud-run-events
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: cloud-run-events-controller
-
----
-
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: cloud-run-events-controller-resolver
-  labels:
-    events.cloud.run/release: devel
-subjects:
-- kind: ServiceAccount
-  name: controller
-  namespace: cloud-run-events
-# An aggregated ClusterRole for all Addressable CRDs. 
-# Ref: https://github.com/knative/eventing/blob/master/config/200-addressable-resolvers-clusterrole.yaml
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: addressable-resolver
