--- a/config/400-controller-service.yaml
+++ b/config/400-controller-service.yaml
@@ -15,7 +15,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cloud-run-events-controller
+  name: controller
   namespace: cloud-run-events
   labels:
     events.cloud.run/release: devel
