--- a/config/500-controller.yaml
+++ b/config/500-controller.yaml
@@ -12,32 +12,29 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# TODO: Deploy webhook
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cloud-run-events-controller
+  name: controller
   namespace: cloud-run-events
   labels:
     events.cloud.run/release: devel
 spec:
   replicas: 1
   selector:
-    matchLabels: &labels
+    matchLabels:
       control-plane: cloud-run-events-controller
   template:
     metadata:
-      labels: *labels
+      labels:
+        control-plane: cloud-run-events-controller
     spec:
-      serviceAccountName: cloud-run-events-controller
+      serviceAccountName: controller
       containers:
       - name: controller
         image: github.com/GoogleCloudPlatform/cloud-run-events/cmd/controller
         imagePullPolicy: Always
         env:
-        - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /var/secrets/google/key.json
         - name: PUBSUB_RA_IMAGE
           value: github.com/GoogleCloudPlatform/cloud-run-events/cmd/pubsub_receive_adapter
         - name: SYSTEM_NAMESPACE
@@ -51,8 +48,6 @@ spec:
         - name: METRICS_DOMAIN
           value: cloud.run/events
         volumeMounts:
-        - name: google-cloud-key
-          mountPath: /var/secrets/google
         - name: config-logging
           mountPath: /etc/config-logging
         resources:
@@ -69,8 +64,5 @@ spec:
       - name: config-logging
         configMap:
           name: config-logging
-      - name: google-cloud-key
-        secret:
-          secretName: cloud-run-events-source-key
-      serviceAccount: cloud-run-events-controller
+      serviceAccount: controller
       terminationGracePeriodSeconds: 10
