--- a/config/500-controller.yaml
+++ b/config/500-controller.yaml
@@ -36,7 +36,9 @@ spec:
         imagePullPolicy: Always
         env:
         - name: PUBSUB_RA_IMAGE
-          value: github.com/GoogleCloudPlatform/cloud-run-events/cmd/pubsub_receive_adapter
+          value: github.com/GoogleCloudPlatform/cloud-run-events/cmd/pubsub/receive_adapter
+        - name: PUBSUB_SUB_IMAGE
+            value: github.com/GoogleCloudPlatform/cloud-run-events/cmd/pubsub/subscription
         - name: SYSTEM_NAMESPACE
           valueFrom:
             fieldRef:
