--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -55,6 +55,12 @@ rules:
   verbs: *everything
 
 - apiGroups:
+    - batch
+  resources:
+    - jobs
+  verbs: *everything
+
+- apiGroups:
     - ""
   resources:
     - secrets # TODO: Does it really need global secrets access?
