Adding PubSubChannel CRDs to Cloud Run Events.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,6 +23,11 @@ required = [
   revision = "68737b1b4e03d9a888e89ee2a44714a56eefd539"
 
 [[override]]
+  name = "github.com/knative/eventing"
+  # HEAD as of 2919-06-14
+  revision = "0251d1f09a39631bc40c415cfb457347f9335c6f"
+
+[[override]]
   name = "go.uber.org/zap"
   revision = "67bc79d13d155c02fd008f721863ff8cc5f30659"
 
