--- a/config/300-pubsubsource.yaml
+++ b/config/300-pubsubsource.yaml
@@ -16,16 +16,18 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    eventing.knative.dev/source: "true"
-    events.cloud.run/crd-install: "true"
     events.cloud.run/release: devel
+    events.cloud.run/crd-install: "true"
+    eventing.knative.dev/source: "true"
   name: pubsubsources.events.cloud.run
 spec:
   group: events.cloud.run
+  version: v1alpha1
   names:
     categories:
     - all
     - knative
+    - pubsub
     - eventing
     - run
     kind: PubSubSource
@@ -33,6 +35,16 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
+  additionalPrinterColumns:
+    - name: Ready
+      type: string
+      JSONPath: ".status.conditions[?(@.type==\"Ready\")].status"
+    - name: Reason
+      type: string
+      JSONPath: ".status.conditions[?(@.type==\"Ready\")].reason"
+    - name: Age
+      type: date
+      JSONPath: .metadata.creationTimestamp
   validation:
     openAPIV3Schema:
       properties:
@@ -101,4 +113,3 @@ spec:
             subscriptionId:
               type: string
           type: object
-  version: v1alpha1
