--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,8 +19,7 @@ required = [
 
 [[override]]
   name = "github.com/knative/pkg"
-  # HEAD as of 2919-06-12
-  revision = "68737b1b4e03d9a888e89ee2a44714a56eefd539"
+  branch = "master"
 
 [[override]]
   name = "go.uber.org/zap"
