--- a/config/300-channel.yaml
+++ b/config/300-channel.yaml
@@ -14,18 +14,18 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
- name: pubsubchannels.events.cloud.run
+ name: channels.pubsub.cloud.run
  labels:
    events.cloud.run/release: devel
    events.cloud.run/crd-install: "true"
    messaging.knative.dev/subscribable: "true"
 spec:
-  group: events.cloud.run
+  group: pubsub.cloud.run
   version: v1alpha1
   names:
-    kind: PubSubChannel
-    plural: pubsubchannels
-    singular: pubsubchannel
+    kind: Channel
+    plural: channels
+    singular: channel
     categories:
     - all
     - knative
