fix cluster role.

--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -35,7 +35,7 @@ rules:
     - delete
 
 - apiGroups:
-    - events.cloud.run
+    - pubsub.cloud.run
   resources:
     - pullsubscriptions/status
     - topics/status
