--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -24,6 +24,7 @@ rules:
     - pubsub.cloud.run
   resources:
     - pullsubscriptions
+    - topics
   verbs: &everything
     - get
     - list
@@ -34,9 +35,10 @@ rules:
     - delete
 
 - apiGroups:
-    - events.cloud.run
+    - pubsub.cloud.run
   resources:
     - pullsubscriptions/status
+    - topics/status
   verbs:
     - get
     - update
@@ -58,6 +60,13 @@ rules:
     - batch
   resources:
     - jobs
+  verbs: *everything
+
+
+- apiGroups:
+    - ""
+  resources:
+    - services
   verbs: *everything
 
 - apiGroups:
