--- a/config/300-topic.yaml
+++ b/config/300-topic.yaml
@@ -48,6 +48,8 @@ spec:
   validation:
     openAPIV3Schema:
       properties:
+        required:
+          - topic
         spec:
           properties:
             secret:
