--- a/config/500-controller.yaml
+++ b/config/500-controller.yaml
@@ -28,6 +28,7 @@ spec:
     metadata:
       labels:
         control-plane: cloud-run-events-controller
+        events.cloud.run/release: devel
     spec:
       serviceAccountName: controller
       containers:
