--- a/config/300-pullsubscription.yaml
+++ b/config/300-pullsubscription.yaml
@@ -54,7 +54,9 @@ spec:
           type: object
         spec:
           # TODO: update the OpenAPI to be much more robust.
-          # TODO: document required fields.
+          required:
+            - sink
+            - topic
           properties:
             secret:
               type: object
@@ -74,6 +76,10 @@ spec:
             transformer:
               type: object
               description: "Reference to an object that will resolve to a domain name to use as the transformer."
+            mode:
+              type: string
+              enum: [CloudEventsBinary, CloudEventsStructured, PushCompatible]
+              description: "Mode defines the encoding and structure of the payload of when this PullSubscription invokes the sink."
             topic:
               type: string
               description: "ID of the Cloud Pub/Sub Topic to Subscribe to. It must be in the form of the unique identifier within the project, not the entire name. E.g. it must be 'laconia', not 'projects/my-gcp-project/topics/laconia'."
