--- a/config/300-pullsubscription.yaml
+++ b/config/300-pullsubscription.yaml
@@ -75,7 +75,7 @@ spec:
             mode:
               type: string
               enum: [CloudEventsBinary, CloudEventsStructured, PushCompatible]
-              description: "Mode defines the encoding and structure of the payload of when this PullSubscription invokes the sink."
+              description: "Mode defines the encoding and structure of the payload of when this PullSubscription invokes the sink. Default is CloudEventsBinary."
             topic:
               type: string
               description: "ID of the Cloud Pub/Sub Topic to Subscribe to. It must be in the form of the unique identifier within the project, not the entire name. E.g. it must be 'laconia', not 'projects/my-gcp-project/topics/laconia'."
