--- a/config/300-channel.yaml
+++ b/config/300-channel.yaml
@@ -14,13 +14,13 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
- name: channels.pubsub.cloud.run
+ name: channels.events.cloud.run
  labels:
    events.cloud.run/release: devel
    events.cloud.run/crd-install: "true"
    messaging.knative.dev/subscribable: "true"
 spec:
-  group: pubsub.cloud.run
+  group: events.cloud.run
   version: v1alpha1
   names:
     kind: Channel
@@ -42,9 +42,9 @@ spec:
     - name: Reason
       type: string
       JSONPath: ".status.conditions[?(@.type==\"Ready\")].reason"
-    - name: Hostname
+    - name: Address
       type: string
-      JSONPath: .status.address.hostname
+      JSONPath: .status.address.url
     - name: Age
       type: date
       JSONPath: .metadata.creationTimestamp
@@ -56,15 +56,11 @@ spec:
             secret:
               type: object
               # TODO: document we default.
-              description: "Credential to use to manage Cloud Pub/Sub. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys)."
+              description: "Credential to use to manage Cloud Pub/Sub. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
             project:
               type: string
               # TODO: document we default.
               description: "ID of the Google Cloud Project to own the Pub/Sub credentials. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'."
-            serviceAccountName:
-              type: string
-              # TODO: document we default.
-              description: "Name of the Kubernetes ServiceAccount to run as."
             subscribable:
               type: object
               properties:
