--- a/config/300-pullsubscription.yaml
+++ b/config/300-pullsubscription.yaml
@@ -60,11 +60,9 @@ spec:
           properties:
             secret:
               type: object
-              # TODO: document we default.
-              description: "Credential to use to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys)."
+              description: "Credential to use to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys).  Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
             project:
               type: string
-              # TODO: document we default.
               description: "ID of the Google Cloud Project that the Pub/Sub Topic exists in. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'."
             sink:
               type: object
