--- a/config/201-channelable-manipulator-clusterrole.yaml
+++ b/config/201-channelable-manipulator-clusterrole.yaml
@@ -23,7 +23,7 @@ metadata:
 # Do not use this role directly. These rules will be added to the "channelable-manipulator" role.
 rules:
   - apiGroups:
-      - events.cloud.run
+      - messaging.cloud.run
     resources:
       - channels
     verbs:
