--- a/config/300-channel.yaml
+++ b/config/300-channel.yaml
@@ -14,13 +14,13 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
- name: channels.events.cloud.run
+ name: channels.messaging.cloud.run
  labels:
    events.cloud.run/release: devel
    events.cloud.run/crd-install: "true"
    messaging.knative.dev/subscribable: "true"
 spec:
-  group: events.cloud.run
+  group: messaging.cloud.run
   version: v1alpha1
   names:
     kind: Channel
