--- a/test/e2e/config/smoketest/pull-smoke-test.yaml
+++ b/test/e2e/config/smoketest/pull-smoke-test.yaml
@@ -33,7 +33,7 @@ metadata:
 spec:
   topic: e2e-smoke-test
   sink:
-    apiVersion: serving.knative.dev/v1beta1
+    apiVersion: serving.knative.dev/v1alpha1
     kind: Service
     name: event-display
 
