--- a/config/300-pullsubscription.yaml
+++ b/config/300-pullsubscription.yaml
@@ -46,12 +46,24 @@ spec:
   validation:
     openAPIV3Schema:
       properties:
-        apiVersion:
-          type: string
-        kind:
-          type: string
-        metadata:
+        registry:
           type: object
+          description: "Internal information, users should not set this property"
+          properties:
+            eventTypes:
+              type: object
+              description: "Event types that PullSubscription can produce"
+              properties:
+                publish:
+                  type: object
+                  properties:
+                    type:
+                      type: string
+                      pattern: "google.pubsub.topic.publish"
+                    schema:
+                      # TODO: set the schema. This might change based on the transformer configured?
+                      type: string
+                      pattern: ""
         spec:
           # TODO: update the OpenAPI to be much more robust.
           required:
