stage for move to kn.dev.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,7 +25,7 @@ required = [
 
 # This is a preemptive override.
 [[override]]
-  name = "github.com/knative/eventing"
+  name = "knative.dev/eventing"
   branch = "master"
 
 # This is a preemptive override.
