--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -48,12 +48,14 @@ rules:
     - messaging.cloud.run
   resources:
     - channels
+    - decorators
   verbs: *everything
 
 - apiGroups:
     - messaging.cloud.run
   resources:
     - channels/status
+    - decorators/status
   verbs:
     - get
     - update
