--- a/config/500-webhook.yaml
+++ b/config/500-webhook.yaml
@@ -38,6 +38,9 @@ spec:
           # This is the Go import path for the binary that is containerized
           # and substituted here.
           image: github.com/google/knative-gcp/cmd/webhook
+          ports:
+          - name: metrics
+            containerPort: 9090
           imagePullPolicy: Always
           resources:
             requests:
