--- a/config/300-pullsubscription.yaml
+++ b/config/300-pullsubscription.yaml
@@ -82,6 +82,13 @@ spec:
             transformer:
               type: object
               description: "Reference to an object that will resolve to a domain name to use as the transformer."
+            ceOverrides:
+              type: object
+              description: "Defines overrides to control modifications of the event sent to the sink."
+              properties:
+                extensions:
+                  type: object
+                  description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
             mode:
               type: string
               enum: [CloudEventsBinary, CloudEventsStructured, PushCompatible]
